# FrostLux

./: CHANGELOG.md  Cargo.toml  README.md  VISION.md
config/: default.toml
src/: app.rs  coap.rs  main.rs  tradfri.rs
src/app/: config.rs  mod.rs  scene.rs
src/ui/: layout.rs  mod.rs  theme.rs
