[package]
name = "frostlux"
version = "0.2.0"
edition = "2021"
description = "TUI controller for IKEA Tradfri smart lights"
license = "GPL-2.0"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = "0.10"
coap-lite = "0.13"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
